--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@octokit/rest": "^22.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.21.2"
   },
   "devDependencies": {
